[package]
name = "rovcommand"
version = "0.1.0"
authors = ["Craig Joly <craig@snowkeep.ca>"]

[dependencies]
find_folder = "0.3.0"
glium = "0.16.0"
winit = "0.6.1"
rand = "0.3.15"
#image = "0.12.3"

[dependencies.conrod]
version = "0.51.1"
features = ["winit", "glium"]

[dependencies.fringe]
version = "1.2.1"
features = ["alloc"]
